# lazyjira

./: CLAUDE.md  COMMIT_STYLING.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/examples/: bulk_create_template.csv
docs/plans/: 2026-02-06-lazyjira-design.md  2026-02-07-all-phases-implementation-plan.md  2026-02-07-generalization-and-roadmap-design.md  2026-02-07-lazyjira-followups.md
src/: app.rs  bulk_upload.rs  cache.rs  config.rs  jira_client.rs  main.rs  setup.rs
src/views/: epics.rs  filters.rs  mod.rs  my_work.rs  team.rs  unassigned.rs
src/widgets/: activity.rs  assign.rs  bulk_actions.rs  bulk_upload.rs  comment.rs  create_ticket.rs  edit_fields.rs  form.rs  keybindings_help.rs  mod.rs  ticket_detail.rs
