[package]
name = "lazyjira"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lazyjira"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
toml = "0.8"
tui-textarea = "0.7"
csv = "1"
